--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<title>My RWD Playground</title>
 	<link rel="stylesheet" href="main.css" type="text/css">
 	<meta name="viewport" content="width=device-width">
+  <script>
+    // Picture element HTML5 shiv
+    document.createElement( "picture" );
+  </script>
+  <script src="https://cdn.rawgit.com/scottjehl/picturefill/3.0.2/dist/picturefill.min.js" async></script>
 </head>
 <body>
 
@@ -30,7 +35,7 @@
 		<picture>
 			<source srcset="images/banner-s.jpg" media="(max-width: 480px)">
 			<source srcset="images/banner-m.jpg" media="(max-width: 768px)">
-			<source srcset="images/banner.jpg" alt="banner">
+			<img srcset="images/banner.jpg" alt="banner">
 		</picture>
 	</div>
 
